@@ -23,6 +23,7 @@ Version 0.9.0alpha12 - 2007-06-XX
    * Display error message for tracks.
    * Fixed drag-and-drop bugs on Mac OS X.
    * Added %releasecountry% to the file renaming preview.
+   * Cluster multi-disc albums identified by tags, not (disc x). (#2555)
 
 Version 0.9.0alpha11 - 2007-05-27
  * New Features:
